# TrajPlanARPL

./: README.md  install_trajgen_depend.sh
ros_traj_gen_utils/: CMakeLists.txt  package.xml
ros_traj_gen_utils/config/: perch_config.yaml  perch_general.bag  std_launch.yaml
ros_traj_gen_utils/include/ros_traj_gen_utils/: apriltag_utils.h  odom_utils.h  poscmd_publisher.h  rect_node.h  ros_cuboid_utils.h  ros_replanner_utils.h  ros_traj_utils.h  ros_waypoint_utils.h
ros_traj_gen_utils/launch/: perch.launch  traj_plan.launch
ros_traj_gen_utils/msg/: Polynomial.msg  StdTraj.msg  cuboid_map.msg
ros_traj_gen_utils/src/: ros_replanner_utils.cpp  traj_manager.cpp
ros_traj_gen_utils/src/cuboid_map/: rect_node.cpp  ros_cuboid_utils.cpp
ros_traj_gen_utils/src/pub_sub/: apriltag_utils.cpp  odom_utils.cpp  poscmd_publisher.cpp  ros_traj_utils.cpp  ros_waypoint_utils.cpp
traj_gen/: CMakeLists.txt  package.xml
traj_gen/cmake/: FindNlopt.cmake  Findooqp.cmake
traj_gen/include/traj_gen/ooqp_interface/: OoqpEigenInterface.hpp  QuadraticProblemFormulation.hpp
traj_gen/include/traj_gen/traj_utils/: quaternion.h
traj_gen/include/traj_gen/trajectory/: BernTraj.h  FOV.h  QPpolyTraj.h  TrajBase.h  Waypoint.h
traj_gen/src/ooqp_interface/: OoqpEigenInterface.cpp  QuadraticProblemFormulation.cpp
traj_gen/src/ros_utils_src/: EigenQP.cpp  polynomial.cc  quaternion.cpp
traj_gen/src/traj_src/: FOV.cpp  QPpolyTraj.cpp  TrajBase.cpp  Waypoint.cpp
